[STYLE]: fix overflow-y for TodosList component

--- a/src/pages/TodoPage/components/TodoPageLayout/TodoPageLayout.module.css
+++ b/src/pages/TodoPage/components/TodoPageLayout/TodoPageLayout.module.css
@@ -1,9 +1,11 @@
 .layout {
   display: flex;
   flex-direction: column;
+  gap: 2rem;
   align-items: center;
   transition: all 0.3s;
   height: 100%;
+  overflow-y: auto;
 }
 
 .isActiveModal {
