--- a/src/pages/TodoPage/components/TodosList/TodosList.module.css
+++ b/src/pages/TodoPage/components/TodosList/TodosList.module.css
@@ -1,4 +1,5 @@
 .todosList {
+  padding-top: 1rem;
   width: 35%;
   min-width: 24rem;
   display: flex;
